--- a/src/main/webapp/WEB-INF/templates/role/roleForm.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleForm.html
@@ -136,10 +136,7 @@
         $(".date-picker").pickadatee({
             closeOnSelect: true
         });
-        var message = '[[${message}]]';
-        if (message !== '') {
-            Materialize.toast(message, 5000);
-        }
+        toast('[[${message}]]');
     });
 </script>
 </body>
