--- a/src/main/webapp/WEB-INF/templates/system/login.html
+++ b/src/main/webapp/WEB-INF/templates/system/login.html
@@ -76,6 +76,7 @@
 
 <script type="text/javascript" src="../../../static/application/js/jquery.min.js"></script>
 <script type="text/javascript" src="../../../static/materialize/js/materialize.min.js"></script>
+<script type="text/javascript" src="../../../static/application/js/global.js"></script>
 <script type="text/javascript">
     $(document.body).css({
         "overflow-x": "hidden",
@@ -83,16 +84,8 @@
     });
 
     $(function () {
-        var screen_width = window.screen.width;
-        $('.page-footer').css({
-            "width": screen_width + "px",
-            "height": 40 + 'px',
-            "padding": 0
-        });
-        var message = '[[${message}]]';
-        if (message !== '') {
-            Materialize.toast(message, 5000);
-        }
+        resize_footer(window.screen.width);
+        toast('[[${message}]]');
     });
 </script>
 </body>
