Added three status flag, light, charge and checked

--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
@@ -84,6 +84,9 @@
             <input id="id" name="id" type="hidden" class="validate" required="required" th:value="${machine.id}"/>
             <input id="longitude" name="longitude" type="hidden" class="validate" th:value="${machine.longitude}"/>
             <input id="latitude" name="latitude" type="hidden" class="validate" th:value="${machine.latitude}"/>
+            <input id="light" name="light" type="hidden" class="validate" th:value="${machine.light}"/>
+            <input id="charge" name="charge" type="hidden" class="validate" th:value="${machine.charge}"/>
+            <input id="checked" name="checked" type="hidden" class="validate" th:value="${machine.checked}"/>
 
             <div class="row">
                 <div class="input-field col s6 m6 l6">
